style2.css
body{
    font-size: 0.925em;
}
*{
    margin: 0;
}

.outline{
    display: flex;
}

.outline .content{
    width: 100%;
    display: flex;
}

.outline .content .left{
    flex: 2;
    height: 100vh;
    box-shadow: 0 0 3px #999999; 

}
.outline .content .right{
    flex: 10;
    background-color: rgb(245, 179, 155);
    width: 700vh;
}



.pcast-player .image img{
    width: 50px;
    height: 70px;
    margin-bottom: 0px;
}

.pcast-player .image .fa-heart{
    width: 50px;
    height: 30px;
    color: green;
    margin-bottom: 25px;
    margin-left: 5px;
}
.pcast-player{
    box-shadow: 0 0 3px #999999; 
    background-color: white;
    display: flex;
}

.pcast-player .text{
    margin-top: 17px;
    margin-left: 7px;
}

.pcast-player .text p{
    color: grey;
    
}

.pcast-player .play-section{
    display: flex;
    flex-direction: column;
    
}


.pcast-player .play-section{
    margin-left: 35vh;
}

.pcast-player .play-section .top button{
    margin-left: 10vh;
    background-color: white;
}

.pcast-player .play-section .top{
    margin-left: 15vh;
    margin-top: 3vh;
}

.pcast-player .play-section .top .fa-random{
    color: green;
}

.pcast-player .side{
    float: right;
    margin-left: 80px;
    margin-top: 30px;
}

.pcast-player .side span{
    margin-left: 4vh;
}



.pcast-player .side progress{
    height: 3px;
    width:7vh;
    margin-bottom: 3px;
  -webkit-appearance: none;
     -moz-appearance: none;
          appearance: none;
    
}
  

.pcast-player .play-section .buttom span{
    margin-bottom: 5px;
}


progress {
    height: 3px;
    width:80vh;
  -webkit-appearance: none;
     -moz-appearance: none;
          appearance: none;
}

progress[value]::-webkit-progress-bar {
    background-color: #555;
    border-radius: 0;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25) inset;
}

progress[value]::-webkit-progress-value{
    background: #fff; 
}

.pcast-time {
    display: inline-block;
    font-size: 13px;
    padding: 0 5px;
    text-align: center;
    width: 4em;
}

.pcast-speed {
    width: 2.5em;
}

.pcast-download {
    font-size: 12px;
    margin-top: 0.5em;
    display: inline-block;
    color: black;
}

